# cbits

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  README_8md.html  ____init_____8py.html  ____init_____8py.js  annotated.html  annotated_dup.js  binding_8c.html  binding_8c__incl.map  binding_8c__incl.md5  bitvector_8c.html  bitvector_8c__incl.map  bitvector_8c__incl.md5  bitvector_8h.html  bitvector_8h.js  bitvector_8h__dep__incl.map  bitvector_8h__dep__incl.md5  bitvector_8h__incl.map  bitvector_8h__incl.md5  bitvector_8h_source.html  bitvector__check_8h.html  bitvector__check_8h__dep__incl.map  bitvector__check_8h__dep__incl.md5  bitvector__check_8h__incl.map  bitvector__check_8h__incl.md5  bitvector__check_8h_source.html  bitvector__compare_8c.html  bitvector__compare_8c.js  bitvector__compare_8c__incl.map  bitvector__compare_8c__incl.md5  bitvector__core_8c.html  bitvector__core_8c.js  bitvector__core_8c__incl.map  bitvector__core_8c__incl.md5  bitvector__internal_8h.html  bitvector__internal_8h.js  (+259 more)
.github/workflows/: build_and_publish.yml  test.yml
include/: bitvector.h  bitvector_internal.h  compat.h
python/: binding.c
python/cbits/: __init__.py
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  groups_1.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  (+3 more)
src/: bitvector.c  compat_dispatch.c
src/cbits/: bitvector_compare.c  bitvector_core.c  bitvector_range.c  bitvector_rank.c  bitvector_sequence.c
src/python/: bitvector_check.h  bitvector_checks.h  bitvector_iter.c  bitvector_iter.h  bitvector_methods.c  bitvector_methods.h  bitvector_methods_basic.c  bitvector_methods_basic.h  bitvector_methods_compare.c  bitvector_methods_compare.h  bitvector_methods_copy.c  bitvector_methods_copy.h  bitvector_methods_misc.c  bitvector_methods_misc.h  bitvector_methods_ops.c  bitvector_methods_ops.h  bitvector_methods_rank.c  bitvector_methods_rank.h  bitvector_methods_sequence.c  bitvector_methods_sequence.h  bitvector_methods_slice.c  bitvector_methods_slice.h  bitvector_module.c  bitvector_object.c  bitvector_object.h  bitvector_parse.h  cbits_module.c  cbits_module.h  cbits_state.h
tests/: test_core.py  test_range.py
tests/c/: test_construct_free.c  test_contain_subvector.c  test_edge_cases.c  test_equal.c  test_range_ops.c  test_rank.c  test_sequence.c  test_single_bit_ops.c  test_stress_memory.c
tests/python/: test_core.py  test_sequence.py
